--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>WELCOME FOR ASSIGNMENTS3</H1>
+    <h1>WELCOME FOR ASSIGNMENTS3</h1>
 </body>
 </html>
